--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "watch": "webpack --watch",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open"
   },
